quickstart/k8s-service/1ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tasky
---
apiVersion: v1
kind: Namespace
metadata:
  name: one
---
apiVersion: v1
kind: Namespace
metadata:
  name: two
---
apiVersion: v1
kind: Namespace
metadata:
  name: three
