quickstart/k8s-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasky
  namespace: tasky
  labels:
    app: tasky
    version: v1
    service: tasky
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasky
  template:
    metadata:
      namespace: tasky
      labels:
        app: tasky
        service: tasky
    spec:
      serviceAccountName: tasky
      containers:
        - name: tasky
          # Public image, Not Private
          image: ppresto/tasky:1.2
          securityContext:
            capabilities:
              add: ["NET_ADMIN", "SYS_TIME"]
          ports:
            - containerPort: 8080
