quickstart/k8s-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasky
  namespace: tasky
spec:
  selector:
    app: tasky
  ports:
    - name: svc-port
      port: 8080
      targetPort: 8080
